--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
   },
   "license": "UNLICENCED",
   "devDependencies": {
+    "@types/xml2js": "^0.4.1",
     "tslint": "^5.8.0",
     "typescript": "^2.6.1"
   },
-  "dependencies": {},
+  "dependencies": {
+    "xml2js": "^0.4.19"
+  },
   "peerDependencies": {},
   "files": [
     "dist"
