--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,16 +2,13 @@
     "compilerOptions": {
         "moduleResolution": "node",
         "declaration": true,
-        "target": "es5",
+        "target": "es6",
         "noImplicitAny": true,
         "noImplicitReturns": true,
         "noImplicitThis": true,
         "strict": true,
         "strictNullChecks": true,
-        "noUnusedLocals": true,
-        "lib": [
-            "ES5"
-        ]
+        "noUnusedLocals": true
     },
     "files": [
         "index.ts"
