--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "prepublishOnly": "npm run build",
     "build": "npm run lint && npm run buildCommonjs && npm run buildModules",
     "buildCommonjs": "tsc --project tsconfig.commonjs.json",
-    "buildModules": "tsc --project tsconfig.modules.json",
+    "buildModules": "tsc --project tsconfig.json",
     "lint": "tslint --format prose --project tsconfig.base.json"
   },
   "license": "UNLICENCED",
