Add repository field to package.json

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/cjs/index.js",
   "module": "dist/modules/index.js",
   "typings": "dist/modules/index.d.ts",
+  "repository": "github:googol/ts-clean-xml",
   "engines": {
     "node": "8.9.1"
   },
