--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
   "license": "MIT",
   "devDependencies": {
     "@types/xml2js": "^0.4.2",
+    "ts-optional-type": "^1.0.0",
     "tslint": "^5.9.1",
     "typescript": "^2.8.1"
   },
   "dependencies": {
+    "ts-optionals": "^1.0.0",
     "xml2js": "^0.4.19"
   },
-  "peerDependencies": {},
+  "peerDependencies": {
+    "ts-optional-type": "^1.0.0"
+  },
   "files": [
     "dist"
   ]
